// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordField when rendered with name and placeholder properties set should render correctly with name and placeholder set to passed in props 1`] = `
<Field
  component={[Function]}
  name="password-field-name"
  placeholder="password-field-placeholder"
  secureTextEntry={true}
  withRef={true}
/>
`;

exports[`PasswordField when rendered with no props should render correctly with default props 1`] = `
<Field
  component={[Function]}
  name="password"
  placeholder="Enter a password"
  secureTextEntry={true}
  withRef={true}
/>
`;
